--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!</p>
+<mat-card class="card">
+    <mat-card-header>
+      <mat-card-title>Sistema de Recrutamento</mat-card-title>
+      <mat-card-subtitle>Gerenciamento de Currículos</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="assets\img\home-icon-silhouette.svg" alt="Image home Sistema de Recrutamento">
+    <mat-card-content>
+      <p>
+        Olá! Seja bem-vindo ao Sistema de Recrutamento. <br>
+        Esse é um sistema para gerenciamento de currículos desenvolvido usando Spring Boot e Angular.
+      </p>
+    </mat-card-content>
+  </mat-card>
+  
