--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -2,7 +2,7 @@
     <mat-drawer #drawer class="example-sidenav" mode="side">
         <img src="assets/img/306277.svg" alt="Imagem de navegação">
       <mat-nav-list class="nav-list">
-        <a mat-list-item routerLink="/">
+        <a mat-list-item routerLink="home">
             <i class="material-icons">home</i>
             Home
         </a>
