HTML e CSS para componete HEADER

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,3 @@
-<p>header works!</p>
+<div class="container">
+    <h1 class="mat-elevation-z8">Sistema de Recrutamento - Análise de Currículos</h1>
+</div>
