--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card">
+<mat-card class="card mat-elevation-z8">
     <mat-card-header>
       <mat-card-title>Sistema de Recrutamento</mat-card-title>
       <mat-card-subtitle>Gerenciamento de Currículos</mat-card-subtitle>
