--- a/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
+++ b/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
@@ -4,37 +4,56 @@
         <img class="fullWidth" src="assets\img\curriculum-vitae.svg" alt="Sistema de Recrutamento - Análise de Currículos">
 
         <section class="section">
-            <mat-checkbox class="margin">Administrador</mat-checkbox>
-            <mat-checkbox class="margin">Cliente</mat-checkbox>
-            <mat-checkbox class="margin">Técnico</mat-checkbox>
+            <mat-checkbox color="primary" class="margin">Administrador</mat-checkbox>
+            <mat-checkbox color="primary" class="margin">Cliente</mat-checkbox>
+            <mat-checkbox color="primary" class="margin">Técnico</mat-checkbox>
         </section>
 
         <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>Nome</mat-label>
-            <input matInput placeholder="Ex. Fulano de Tal">
+            <input 
+            [formControl]="nome"
+            required
+            matInput 
+            placeholder="Ex. Fulano de Tal"
+            maxlength="50">
             <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>CPF</mat-label>
-            <input matInput placeholder="Ex. 000.000.000-00">
+            <input 
+            [formControl]="cpf"
+            required
+            matInput 
+            placeholder="Ex. 000.000.000-00"
+            mask="000.000.000-00">
             <mat-icon matSuffix>pin</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>E-mail</mat-label>
-            <input matInput placeholder="Ex. fulano@mail.com">
+            <input 
+            [formControl]="email"
+            required
+            matInput 
+            placeholder="Ex. fulano@mail.com">
             <mat-icon matSuffix>email</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>Senha</mat-label>
-            <input type="password" matInput placeholder="Ex. ****">
+            <input 
+            [formControl]="senha"
+            required
+            type="password" 
+            matInput 
+            placeholder="Ex. ****">
             <mat-icon matSuffix>password</mat-icon>
         </mat-form-field>
 
-        <button class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Cadastrar</button>
-        <button class="fullWidth mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
+        <button [disabled]="!validaCampos()" class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Cadastrar</button>
+        <button routerLink="../" class="fullWidth mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
     </form>
 
     <p class="fullWidth">by Mariana Kanashiro</p>
