--- a/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
+++ b/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
@@ -4,14 +4,16 @@
         <img class="fullWidth" src="assets\img\curriculum-vitae.svg" alt="Sistema de Recrutamento - Análise de Currículos">
 
         <section class="section">
-            <mat-checkbox color="primary" class="margin">Administrador</mat-checkbox>
-            <mat-checkbox color="primary" class="margin">Cliente</mat-checkbox>
-            <mat-checkbox color="primary" class="margin">Técnico</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(0)" color="primary" class="margin">Administrador</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(1)" color="primary" class="margin">Cliente</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(2)" color="primary" class="margin">Técnico</mat-checkbox>
         </section>
 
         <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>Nome</mat-label>
             <input 
+            [(ngModel)]="tecnico.nome"
+            name="nome"
             [formControl]="nome"
             required
             matInput 
@@ -23,6 +25,8 @@
         <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>CPF</mat-label>
             <input 
+            [(ngModel)]="tecnico.cpf"
+            name="cpf"
             [formControl]="cpf"
             required
             matInput 
@@ -34,6 +38,8 @@
         <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>E-mail</mat-label>
             <input 
+            [(ngModel)]="tecnico.email"
+            name="email"
             [formControl]="email"
             required
             matInput 
@@ -44,6 +50,8 @@
         <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>Senha</mat-label>
             <input 
+            [(ngModel)]="tecnico.senha"
+            name="senha"
             [formControl]="senha"
             required
             type="password" 
@@ -52,7 +60,7 @@
             <mat-icon matSuffix>password</mat-icon>
         </mat-form-field>
 
-        <button [disabled]="!validaCampos()" class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Cadastrar</button>
+        <button (click)="create()" [disabled]="!validaCampos()" class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Cadastrar</button>
         <button routerLink="../" class="fullWidth mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
     </form>
 
