--- a/src/app/components/tecnico/tecnico-update/tecnico-update.component.html
+++ b/src/app/components/tecnico/tecnico-update/tecnico-update.component.html
@@ -1,12 +1,19 @@
 <div class="container mat-elevation-z8">
     <form action="" class="form">
-        <h1>Cadastrar Técnico</h1>
+        <h1>Atualizar Técnico</h1>
         <img class="fullWidth" src="assets\img\curriculum-vitae.svg" alt="Sistema de Recrutamento - Análise de Currículos">
 
         <section class="section">
-            <mat-checkbox (click)="addPerfil(0)" color="primary" class="margin">Administrador</mat-checkbox>
-            <mat-checkbox (click)="addPerfil(1)" [checked]="true" color="primary" class="margin">Cliente</mat-checkbox>
-            <mat-checkbox (click)="addPerfil(2)" color="primary" class="margin">Técnico</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(0)" 
+                          color="primary" 
+                          class="margin">Administrador</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(1)" 
+                          [checked]="true" 
+                          color="primary" 
+                          class="margin">Cliente</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(2)" 
+                          color="primary" 
+                          class="margin">Técnico</mat-checkbox>
         </section>
 
         <mat-form-field class="fullWidth" appearance="fill">
@@ -60,8 +67,13 @@
             <mat-icon matSuffix>password</mat-icon>
         </mat-form-field>
 
-        <button (click)="create()" [disabled]="!validaCampos()" class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Cadastrar</button>
-        <button routerLink="../" class="fullWidth mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
+        <button (click)="update()" 
+                [disabled]="!validaCampos()" 
+                class="fullWidth mat-elevation-z4" 
+                mat-flat-button color="primary">Atualizar</button>
+        <button routerLink="../../" 
+                class="fullWidth mat-elevation-z4" 
+                mat-stroked-button color="warn">Cancelar</button>
     </form>
 
     <p class="fullWidth">by Mariana Kanashiro</p>
