--- a/src/app/components/chamado/chamado-create/chamado-create.component.html
+++ b/src/app/components/chamado/chamado-create/chamado-create.component.html
@@ -6,6 +6,8 @@
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Título do Chamado</mat-label>
             <input 
+            [(ngModel)]="chamado.titulo"
+            name="titulo"
             [formControl]="titulo"
             required
             matInput 
@@ -16,7 +18,7 @@
     <div class="status-prioridade">
         <mat-form-field appearance="outline">
             <mat-label>Selecione um Status</mat-label>
-            <mat-select [formControl]="status" required>
+            <mat-select [formControl]="status" required [(ngModel)]="chamado.status" name="status">
                 <mat-option value="0">ABERTO</mat-option>
                 <mat-option value="1">EM ANDAMENTO</mat-option>
                 <mat-option value="2">ENCERRADO</mat-option>
@@ -25,7 +27,7 @@
 
         <mat-form-field appearance="outline">
             <mat-label>Selecione uma Prioridade</mat-label>
-            <mat-select [formControl]="prioridade" required>
+            <mat-select [formControl]="prioridade" required [(ngModel)]="chamado.prioridade" name="prioridade">
                 <mat-option value="0">BAIXA</mat-option>
                 <mat-option value="1">MÉDIA</mat-option>
                 <mat-option value="2">ALTA</mat-option>
@@ -36,8 +38,8 @@
     <div class="tecnico">
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Selecione um Técnico</mat-label>
-            <mat-select [formControl]="tecnico" required>
-                <mat-option value="0">Valdir</mat-option>
+            <mat-select [formControl]="tecnico" required [(ngModel)]="chamado.tecnico" name="tecnico">
+                <mat-option *ngFor="let tec of tecnicos" value="{{tec.id}}">{{tec.nome}}</mat-option>
             </mat-select>
         </mat-form-field>
     </div>
@@ -45,26 +47,33 @@
     <div class="cliente">
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Selecione um Cliente</mat-label>
-            <mat-select [formControl]="cliente" required>
-                <mat-option value="0">Albert Einstein</mat-option>
+            <mat-select [formControl]="cliente" required [(ngModel)]="chamado.cliente" name="cliente">
+                <mat-option *ngFor="let cli of clientes" value="{{cli.id}}">{{cli.nome}}</mat-option>
             </mat-select>
         </mat-form-field>
     </div>
 
     <form class="form">
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>Descrição</mat-label>
+            <mat-label>Observações</mat-label>
             <textarea 
-            [formControl]="descricao" 
+            [(ngModel)]="chamado.observacoes" 
+            name="observacoes"
+            [formControl]="observacoes" 
             required  
             matInput 
-            class="descricao" 
+            class="observacoes" 
             placeholder="Ex. Trocar fonte de notebook queimada"></textarea>
         </mat-form-field>
     </form>
 
-    <button [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Criar</button>
-    <button class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
+    <button 
+        (click)="create()" 
+        [disabled]="!validaCampos()" 
+        class="full-width mat-elevation-z4" 
+        mat-raised-button 
+        color="primary">Criar</button>
+    <button routerLink="../" class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
 
     <p class="full-width">by Mariana Kanashiro</p>
 
