--- a/src/app/components/chamado/chamado-update/chamado-update.component.html
+++ b/src/app/components/chamado/chamado-update/chamado-update.component.html
@@ -1,1 +1,84 @@
-<p>chamado-update works!</p>
+<div class="container mat-elevation-z8">
+    <h1 class="full-width">Atualizando Chamado</h1>
+    <img class="full-width" src="assets\img\application-form.svg" alt="Chamado image">
+
+    <form class="form">
+        <mat-form-field class="full-width" appearance="outline">
+            <mat-label>Título do Chamado</mat-label>
+            <input 
+            [(ngModel)]="chamado.titulo"
+            name="titulo"
+            [formControl]="titulo"
+            required
+            matInput 
+            placeholder="Ex. Trocar bateria de notebook">
+        </mat-form-field>
+    </form>
+
+    <div class="status-prioridade">
+        <mat-form-field appearance="outline">
+            <mat-label>Selecione um Status</mat-label>
+            <mat-select [formControl]="status" required [(ngModel)]="chamado.status" name="status">
+                <mat-option value="0">ABERTO</mat-option>
+                <mat-option value="1">EM ANDAMENTO</mat-option>
+                <mat-option value="2">ENCERRADO</mat-option>
+            </mat-select>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+            <mat-label>Selecione uma Prioridade</mat-label>
+            <mat-select [formControl]="prioridade" required [(ngModel)]="chamado.prioridade" name="prioridade">
+                <mat-option value="0">BAIXA</mat-option>
+                <mat-option value="1">MÉDIA</mat-option>
+                <mat-option value="2">ALTA</mat-option>
+            </mat-select>
+        </mat-form-field>
+    </div>
+
+    <div class="tecnico">
+        <mat-form-field class="full-width" appearance="outline">
+            <mat-label>Selecione um Técnico</mat-label>
+            <mat-select [formControl]="tecnico" required [(ngModel)]="chamado.tecnico" name="tecnico">
+                <mat-option *ngFor="let tec of tecnicos" value="{{tec.id}}">{{tec.nome}}</mat-option>
+            </mat-select>
+        </mat-form-field>
+    </div>
+
+    <div class="cliente">
+        <mat-form-field class="full-width" appearance="outline">
+            <mat-label>Selecione um Cliente</mat-label>
+            <mat-select [formControl]="cliente" required [(ngModel)]="chamado.cliente" name="cliente">
+                <mat-option *ngFor="let cli of clientes" value="{{cli.id}}">{{cli.nome}}</mat-option>
+            </mat-select>
+        </mat-form-field>
+    </div>
+
+    <form class="form">
+        <mat-form-field class="full-width" appearance="outline">
+            <mat-label>Observações</mat-label>
+            <textarea 
+            [(ngModel)]="chamado.observacoes" 
+            name="observacoes"
+            [formControl]="observacoes" 
+            required  
+            matInput 
+            class="observacoes" 
+            placeholder="Ex. Trocar fonte de notebook queimada"></textarea>
+        </mat-form-field>
+    </form>
+
+    <button 
+        (click)="create()" 
+        [disabled]="!validaCampos()" 
+        class="full-width mat-elevation-z4" 
+        mat-raised-button 
+        color="primary">Atualizar</button>
+    <button 
+        routerLink="../" 
+        class="full-width mat-elevation-z4" 
+        mat-stroked-button 
+        color="warn">Cancelar</button>
+
+    <p class="full-width">by Mariana Kanashiro</p>
+
+</div>
