--- a/src/app/components/chamado/chamado-update/chamado-update.component.html
+++ b/src/app/components/chamado/chamado-update/chamado-update.component.html
@@ -17,7 +17,7 @@
 
     <div class="status-prioridade">
         <mat-form-field appearance="outline">
-            <mat-label>{{ retornaStatus(chamado.status) }}</mat-label>
+            <mat-label>STATUS ({{ retornaStatus(chamado.status) }})</mat-label>
             <mat-select [formControl]="status" required [(ngModel)]="chamado.status" name="status">
                 <mat-option value="0">ABERTO</mat-option>
                 <mat-option value="1">EM ANDAMENTO</mat-option>
@@ -26,7 +26,7 @@
         </mat-form-field>
 
         <mat-form-field appearance="outline">
-            <mat-label>{{ retornaPrioridade(chamado.prioridade) }}</mat-label>
+            <mat-label>PRIORIDADE ({{ retornaPrioridade(chamado.prioridade) }})</mat-label>
             <mat-select [formControl]="prioridade" required [(ngModel)]="chamado.prioridade" name="prioridade">
                 <mat-option value="0">BAIXA</mat-option>
                 <mat-option value="1">MÉDIA</mat-option>
@@ -37,7 +37,7 @@
 
     <div class="tecnico">
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>{{ chamado.nomeTecnico }}</mat-label>
+            <mat-label>TÉCNICO ({{ chamado.nomeTecnico }})</mat-label>
             <mat-select [formControl]="tecnico" required [(ngModel)]="chamado.tecnico" name="tecnico">
                 <mat-option *ngFor="let tec of tecnicos" value="{{tec.id}}">{{tec.nome}}</mat-option>
             </mat-select>
@@ -46,7 +46,7 @@
 
     <div class="cliente">
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>{{ chamado.nomeCliente }}</mat-label>
+            <mat-label>CLIENTE ({{ chamado.nomeCliente }})</mat-label>
             <mat-select [formControl]="cliente" required [(ngModel)]="chamado.cliente" name="cliente">
                 <mat-option *ngFor="let cli of clientes" value="{{cli.id}}">{{cli.nome}}</mat-option>
             </mat-select>
@@ -74,7 +74,7 @@
         mat-raised-button 
         color="primary">Atualizar</button>
     <button 
-        routerLink="../" 
+        routerLink="../../" 
         class="full-width mat-elevation-z4" 
         mat-stroked-button 
         color="warn">Cancelar</button>
